Fix spelling elapsed

--- a/dos33.html
+++ b/dos33.html
@@ -456,7 +456,7 @@ var StickyHeaders = (function() {
         }
     };
 
-    var onFade = function( ellapsed ) // relative time
+    var onFade = function( elapsed ) // relative time
     {
         var now = new Date().getTime(); // absolute time
         if( now >= _onFadeTimeBegin && _onFadeTimeBegin )
