Fix DCBATK typo

--- a/dos33.html
+++ b/dos33.html
@@ -5354,7 +5354,7 @@ Let the complete clusterfrak of bad design commence in <a class='link' href="htt
 35EE:FC FC          171 <a class="d" name="DCBNSA"     >DCBNSA      </a>DS 2            ; NO SECTORS ALLOCATED          ; [1D]
                     172 ;
 35F0:FD             173 <a class="d" name="DCBALS"     >DCBALS      </a>DS 1            ; ALLOCATION SECTOR BYTE        ; [1F]
-35F1:FC             174 <a class="d" name="DCBATK"     >DCBFUC      </a>DS 1            ; ALLOCATION TRACK              ; [20]
+35F1:FC             174 <a class="d" name="DCBATK"     >DCBATK      </a>DS 1            ; ALLOCATION TRACK              ; [20]
 35F2:FE FE FF FC    175 <a class="d" name="DCBABM"     >DCBABM      </a>DS 4            ; ALLOCATION TRACK SECTOR BIT MAP;[21] <a class='struct' name='_35F2'>wastes</a> 2 bytes, See <a class="x" href="#FS3">FS3</a> and Line #<a class='line' href='#FLOCSEC.184'>184</a>
                     176 ;
 35F6:FD             177 <a class="d" name="DCBFUC"     >DCBFUC      </a>DS 1            ; FILE USE CODE                 ; [25]
