Start convert double quote to single quote for html

--- a/dos33.html
+++ b/dos33.html
@@ -626,7 +626,7 @@ that overflow into this region -->
 
 <h1><a class='section' name='Introduction'>1.0 Introduction</a></h1>
 <br>Transcribed and Annotated by Michael Pohoreski.
-<br>Latest version on GitHub: <a class='link' href="http://htmlpreview.github.com/?https://github.com/Michaelangel007/apple2_dos33/blob/master/dos33.html">dos33.html</a>
+<br>Latest version on GitHub: <a class='link' href='http://htmlpreview.github.com/?https://github.com/Michaelangel007/apple2_dos33/blob/master/dos33.html'>dos33.html</a>
 <p>
 Numerous improvements have been made over the original DOS 3.3C assembly source code listing!
 <p>
@@ -676,8 +676,8 @@ Addr:## ## ##       L## LABEL       MNEMONIC        COMMENT                     
     <tr>
         <td>LABEL</td>
         <td>All function names, variable names, branch target names, and references to Code and Data are color-coded:
-<br><a class="f" >Function Definition</a>
-<br><a class="d" >Data Definition</a>
+<br><a class='f' >Function Definition</a>
+<br><a class='d' >Data Definition</a>
 <br><a class='do'>Macro Definition</a>
 <br><a class='e' >Const Definition</a>
 </td>
