HTML cleanup double quote

--- a/dos33.html
+++ b/dos33.html
@@ -685,8 +685,8 @@ Addr:## ## ##       L## LABEL       MNEMONIC        COMMENT                     
     <tr>
         <td>MNEMONIC</td>
         <td>Assembly language instruction
-<br><a class="x">Function Reference</a>
-<br><a class="v">Variable Reference</a>
+<br><a class='x'>Function Reference</a>
+<br><a class='v'>Variable Reference</a>
 <br><span class='n'>0-9</span>, <span class='n'>A-F</span>
 </td>
     </tr>
@@ -723,7 +723,7 @@ Addr:## ## ##       L## LABEL       MNEMONIC        COMMENT                     
 <b class='warn'>WARNING:</b> DOS 3.3 was written by an amateur.
  <i>Reading this source code will probably make you angry</i> at all the <a class='link' href='#VTOC'>dumb shit</a> it does.
  Look for all my <b>*sigh*</b> comments and
- <b><a class="dumb" href="#HNTDAFS1">HNTDAFS</a></b> (How NOT to Design a File System) links.
+ <b><a class='dumb' href='#HNTDAFS1'>HNTDAFS</a></b> (How NOT to Design a File System) links.
  While knowing "<b>What To Do</b>" is important, knowing "<b>What NOT To Do</b>" is even <i>more</i> important.
  As they say, <span class="i">"Hindsight is 20/20."</span>
 
