--- a/dos33.html
+++ b/dos33.html
@@ -883,9 +883,9 @@ With that "legalese" out of the way ... enjoy the read!
                     00134 098 *
                     00135 099             REP 40
                     00136 100             PAGE
-1B00:4C 84 1D       00137 101 <a class="f" name="BEGIN"   >BEGIN       </a>JMP <a class="x" href="#DBINIT">DBINIT</a>                                      ; === DOS loads @ $1B00 ===
+1B00:4C 84 1D       00137 101 <a class='f' name='BEGIN'   >BEGIN       </a>JMP <a class='x' href='#DBINIT'>DBINIT</a>                                      ; === DOS loads @ $1B00 ===
                     00138 102 ;                                                           ; Loaded in at $38D4
-                    00139 103 <a class="f" name="DOSREL"  >DOSREL      </a>EQU *                                           ; Called from File <a class="file" href="#BOOTLDR">BOOTLDR</a>, Page <a class="page" href="#page12">12</a>, Line #<a class='line' href='#BOOTLDR.298'>298</a>
+                    00139 103 <a class='f' name='DOSREL'  >DOSREL      </a>EQU *                                           ; Called from File <a class='file' href='#BOOTLDR'>BOOTLDR</a>, Page <a class='page' href='#page12'>12</a>, Line #<a class='line' href='#BOOTLDR.298'>298</a>
                     00140 104 ;
                     00141 105 ; GET RELOCATION PARMS
                     00142 106 ;
