Make CSS anchor.e available to span, etc

--- a/dos33.html
+++ b/dos33.html
@@ -56,7 +56,7 @@ a.do { /* do macroname */
 a.dumb { /* How Not To Design a File System (HNTDAFS) or How Not To Design an Operating Systems (HNTDAOS) */
     color: #808; /* purple */
 }
-a.e { /* const equ */
+.e { /* const equ -- ROM address, i.e. $FCA8 */
     color          : #80F  ; /* 088 = dark green */
     text-decoration: none  ; /* remove underlink from data link */
     font-weight    : normal; /* remove bold */
