Comment: UNLocK or unlOCk

--- a/dos33.html
+++ b/dos33.html
@@ -1234,7 +1234,7 @@ With that "legalese" out of the way ... enjoy the read!
 1D26:EF 24          032             DW <a class='x' href='#ECHAIN'>ECHAIN</a>-<span class='n'>1</span>                                     ; [4]
 1D28:62 22          033             DW <a class='x' href='#EDEL'  >EDEL</a>-<span class='n'>1</span>                                       ; [5]
 1D2A:70 22          034             DW <a class='x' href='#ELOCK' >ELOCK</a>-<span class='n'>1</span>                                      ; [6]
-1D2C:74 22          035             DW <a class='x' href='#EUNLK' >EUNLK</a>-<span class='n'>1</span>                                      ; [7] /sarcasm Oh, noes! That 'OC' is too much work!
+1D2C:74 22          035             DW <a class='x' href='#EUNLK' >EUNLK</a>-<span class='n'>1</span>                                      ; [7] /sarcasm Oh, noes! That 'OC' in 'unl<b>OC</b>k' is too much work to type!
 1D2E:E9 22          036             DW <a class='x' href='#ECLOSE'>ECLOSE</a>-<span class='n'>1</span>                                     ; [8]
 1D30:1A 25          037             DW <a class='x' href='#EREAD' >EREAD</a>-<span class='n'>1</span>                                      ; [9]
 1D32:C5 25          038             DW <a class='x' href='#EEXEC' >EEXEC</a>-<span class='n'>1</span>                                      ; [A]
