--- a/dos33.html
+++ b/dos33.html
@@ -2695,15 +2695,15 @@ With that "legalese" out of the way ... enjoy the read!
                     160 ; OCTD - OUTPUT A CHAR TO DISK
                     161 ;
                     162 <a class='f' name='OCTD'     >OCTD        </a>EQU *
-260E:20 5E 26       163             JSR <a class='x' href='#TSTRUN'>TSTRUN</a>      ; GO TEST RUN
-2611:B0 66          164             BCS <a class='x' href='#ICFDB'>ICFDB</a>       ;BRANCH IF NOT RUN MODE
-2613:AD 5C 2A       165             LDA <a class='v' href='#SVA'>SVA</a>         ; CHAR IN SAVED ACU
-2616:8D C3 35       166             STA CCBDAT      ; PUT INTO CCBDATA AREA
-2619:A9 04          167             LDA #CRQWR      ; SET WRITE
-261B:8D BB 35       168             STA CCBREQ
-261E:A9 01          169             LDA #CRMNBT     ; SET NEXT BYTE
-2620:8D BC 35       170             STA CCBRQM
-2623:4C A8 26       171             JMP DOSGO       ; GO WRITE BYTE
+260E:20 5E 26       163             JSR <a  class='x' href='#TSTRUN'>TSTRUN</a>      ; GO TEST RUN
+2611:B0 66          164             BCS <a  class='x' href='#ICFDB' >ICFDB</a>       ;BRANCH IF NOT RUN MODE
+2613:AD 5C 2A       165             LDA <a  class='v' href='#SVA'   >SVA</a>         ; CHAR IN SAVED ACU
+2616:8D C3 35       166             STA <a  class='v' href='#CCBDAT'>CCBDAT</a>      ; PUT INTO CCBDATA AREA
+2619:A9 04          167             LDA #<a class='v' href='#CRQWR' >CRQWR</a>      ; SET WRITE
+261B:8D BB 35       168             STA <a  class='v' href='#CCBREQ'>CCBREQ</a>
+261E:A9 01          169             LDA #<a class='v' href='#CRMNBT'>CRMNBT</a>     ; SET NEXT BYTE
+2620:8D BC 35       170             STA <a  class='v' href='#CCBRQM'>CCBRQM</a>
+2623:4C A8 26       171             JMP <a  class='x' href='#DOSGO' >DOSGO</a>       ; GO WRITE BYTE
                     172 ;
                     173 ; INCFD - INPUT A CHAR FROM DISK
                     174 ;
